<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/url_entry_rootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aw_blue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:text="@string/vmware_airwatch_room_finder"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/url_entry"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="40dp"
                android:background="#C3E3F8"
                android:hint="@string/enter_url"
                android:inputType="textUri"
                android:maxWidth="270dp"
                android:imeOptions="flagNoExtractUi|actionNext"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="15dp"
                android:background="#C3E3F8"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:maxWidth="270dp"
                android:visibility="gone"
                android:imeOptions="flagNoExtractUi|actionNext"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="10dp"
                android:background="#C3E3F8"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxWidth="270dp"
                android:visibility="gone"
                android:imeOptions="flagNoExtractUi|actionGo"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:maxWidth="278dp"
                android:text="@string/login" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>